# cookiecutter-modules

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  README.md  release-please-config.json
.github/workflows/: release-please.yml  standard.yml
docker-image/: cookiecutter.json
docker-image/{{cookiecutter.__project_slug}}/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  setup.ps1
next-project/: CHANGELOG.md  cookiecutter.json
next-project/{{cookiecutter.__project_slug}}/: docker-compose-deploy.yaml  docker-compose-deploy.yml  docker-compose.yaml  docker-compose.yml  setup.sh
python-scripts/: CHANGELOG.md  cookiecutter.json
python-scripts/{{cookiecutter.__project_slug}}/: .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  setup.ps1  tox.ini
python-scripts/{{cookiecutter.__project_slug}}/.github/workflows/: standard.yml
python-scripts/{{cookiecutter.__project_slug}}/src/examples/: example1.py
python-scripts/{{cookiecutter.__project_slug}}/src/{{cookiecutter.__folder_name_formatted}}/: __init__.py  {{ cookiecutter.__first_script_name_formatted }}.py
python-scripts/{{cookiecutter.__project_slug}}/tests/: test_{{cookiecutter.__first_script_name_formatted}}.py
simple/: CHANGELOG.md  cookiecutter.json
simple/{{cookiecutter.__project_slug}}/: MANIFEST.in  README.md  docker-compose-deploy.yml  docker-compose.yml  setup.ps1  setup.sh
terraform/: cookiecutter.json
tf-composition/: CHANGELOG.md  cookiecutter.json
tf-module/: CHANGELOG.md  cookiecutter.json
(+41 files in other folders)
