[build-system]
requires = ["setuptools >= 57.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.__project_name_formatted}}"
version = "0.0.0"
description = "{{cookiecutter.project_description}}"
requires-python = ">={{cookiecutter.python_version}}"
readme = "README.md"
authors = [ { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"}]

dependencies = [
  "tomli"
]

[project.optional-dependencies]
ci = ["black", "coverage", "pylint", "flake8"]
cd = ["twine"]

[project.scripts]
{{cookiecutter.__first_script_name_formatted}} = "{{cookiecutter.__folder_name_formatted}}.{{cookiecutter.__first_script_name_formatted}}:main"

[tool.black]
line-length = 79
use-tabs = false
tab-width = 2
